<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="LANGUAGE_ENVIRONMENT">EN</string>
    <string name="about">About TTTalk</string>
    <string name="about_translator">Translators</string>
    <string name="accept">Accept</string>
    <string name="account">Account</string>
    <string name="action_find_password_send">Send password</string>
    <string name="action_registe_beagin">sign up &#8230;</string>
    <string name="action_send_verify_code">Send Verification Code</string>
    <string name="action_send_verify_code_beagin">Sending verification code &#8230;</string>
    <string name="action_send_verify_code_ok">Verification code has been sent.</string>
    <string name="add">Add</string>
    <string name="add_as_friend">Follow</string>
    <string name="add_friend">Invite Friends</string>
    <string name="add_friend_id_is_mine">Can not add your own ID</string>
    <string name="add_friend_tel_is_mine">You cannot add your own phone number.</string>
    <string name="add_ok">Followed</string>
    <string name="additional_language">Additional Languages</string>
    <string name="additional_language2">2nd Language</string>
    <string name="additional_language3">3rd Language</string>
    <string name="additional_language4">4th Language</string>
    <string name="agreement">Agreement</string>
    <string name="album">Album</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alipay_recharge_memo"><![CDATA[If Alipay failed, please prepaid expenses transferred Alipay account (<font color="blue">finance@im.dlmu.edu.cn</font>), then contact <font color="blue">0411-3970-7280</font>, for you to manually recharge after we confirm the information.]]></string>
    <string name="alipay_result_status_4000" tools:ignore="ExtraTranslation，UnusedResources">系统异常</string>
    <string name="alipay_result_status_4001" tools:ignore="ExtraTranslation，UnusedResources">数据格式不正确</string>
    <string name="alipay_result_status_4003" tools:ignore="ExtraTranslation，UnusedResources">该用户绑定的支付宝账户被冻结或不允许支付</string>
    <string name="alipay_result_status_4004" tools:ignore="ExtraTranslation，UnusedResources">该用户已解除绑定</string>
    <string name="alipay_result_status_4005" tools:ignore="ExtraTranslation，UnusedResources">绑定失败或没有绑定</string>
    <string name="alipay_result_status_4006" tools:ignore="ExtraTranslation，UnusedResources">订单支付失败</string>
    <string name="alipay_result_status_4010" tools:ignore="ExtraTranslation，UnusedResources">重新绑定账户</string>
    <string name="alipay_result_status_6000" tools:ignore="ExtraTranslation，UnusedResources">支付服务正在进行升级操作</string>
    <string name="alipay_result_status_6001" tools:ignore="ExtraTranslation，UnusedResources">用户中途取消支付操作</string>
    <string name="alipay_result_status_6002" tools:ignore="ExtraTranslation，UnusedResources">网络连接出错</string>
    <string name="alipay_result_status_7001" tools:ignore="ExtraTranslation，UnusedResources">网页支付失败</string>
    <string name="alipay_result_status_8000" tools:ignore="ExtraTranslation，UnusedResources">正在处理中&#8230;</string>
    <string name="alipay_result_status_9000" tools:ignore="ExtraTranslation，UnusedResources">操作成功</string>
    <string name="already_copy_to_clipboard">Copy to clipboard</string>
    <string name="already_exists_user_pls_change_tel">This contact is already in use.</string>
    <string name="already_exists_user_pls_login">This contact is already in use.</string>
    <string name="already_sms_friend_msg">The friend is currently SMS users, if the other party to replace your phone number, the phone will not find your transit.</string>
    <string name="announcement">Announcement</string>
    <string name="app_id">1448374425401042</string>
    <string name="app_name">dlmu.im</string>
    <string name="apply_do_translator">Join</string>
    <string name="are_you_sure_delete_message">Are you sure you want to delete this content?</string>
    <string name="auto_translation_msg">free translation</string>
    <string name="balance">Wallet</string>
    <string name="be_sure_to_block_friend">You will no receive messages from this user.</string>
    <string name="be_sure_to_delete_all_the_messages">Deleted messages can not be recovered.Delete now?</string>
    <string name="be_sure_to_remove_friend">You will no longer receive messages from this friend. Delete contact？</string>
    <string name="be_sure_to_report_friend">You will no longer receive messages from this friend. Report contact？</string>
    <string name="before_yesterday">before yesterday</string>
    <string name="buy">Buy</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_download_weibo">\tCancel</string>
    <string name="cancel_voice">Cancel recording</string>
    <string name="change_fullname">Change Fullname</string>
    <string name="change_language">Change Language</string>
    <string name="change_memo">Set Description</string>
    <string name="change_nickname">Set Alias</string>
    <string name="change_password">Change Password</string>
    <string name="change_tel_input_pwd_check">Verifying password&#8230;</string>
    <string name="change_tel_input_pwd_success">password is valid.</string>
    <string name="change_tel_password_msg">Input current password.</string>
    <string name="charges_introduction">Charging Rules</string>
    <string name="chat_language_from_to">%1$s to %2$s</string>
    <string name="city">city</string>
    <string name="content_cannot_be_empty">content is required</string>
    <string name="curr_user_balance"><![CDATA[Your Balance <font color="#ff0000">%s</font>]]></string>
    <string name="current_version">Version</string>
    <string name="data_saving">Saving&#8230;</string>
    <string name="data_sending">Sending&#8230;</string>
    <string name="default_password">******</string>
    <string name="delete_message">Delete Message</string>
    <string name="delete_selected">Delete</string>
    <string name="detail_information">Detail</string>
    <string name="df_mmdd">dd-MM-yyyy</string>
    <string name="df_yyyymmdd">dd-MM-yyyy</string>
    <string name="distance">%skm faraway</string>
    <string name="email_input_has_blank">Email is required.</string>
    <string name="empty"></string>
    <string name="favorite">Likes</string>
    <string name="file_not_found">file not found</string>
    <string name="find_password">Find Password</string>
    <string name="friend_add_memo1">1, Know friends overseas phone number, you can directly enter the phone number to follow friends</string>
    <string name="friend_add_memo2">2, Know overseas friends e-mail, you can directly follow friends lose e-mail address</string>
    <string name="friend_add_ok">Friends Added</string>
    <string name="friend_add_tel_msg"><![CDATA[No Country Calling Code[+0086,+0082].<br />[Example:] <font color="#ff0000">01012345678, 13012345678 </font>]]></string>
    <string name="friend_block_msg">Your message has been the other rejected</string>
    <string name="friend_block_success_message">The friend has been blocked, for unblock you should add this user as friend again.</string>
    <string name="friend_delete_success">Friends Deleted</string>
    <string name="friend_menu_block">Block</string>
    <string name="friend_menu_clean_chat_history">Delete Chat Records</string>
    <string name="friend_menu_delete">Delete</string>
    <string name="friend_menu_more_chat_history">Get Chat History</string>
    <string name="friend_menu_report">Report</string>
    <string name="friend_recommended">Recommended Friends</string>
    <string name="friend_search_by_email_input">By Email</string>
    <string name="friend_search_by_input">By Mobile Number</string>
    <string name="full_name">Full Nanme</string>
    <string name="gate_footer_text">©TTTalk %s</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages.</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_registered">From GCM: device successfully registered.</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered.</string>
    <string name="gender">Gender</string>
    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>
    <string name="google_service_connect_failed">Failed to connect to GOOGLE server.</string>
    <string name="got_it">Got it</string>
    <string name="goto_dispatch">Slide Up to Next Page</string>
    <string name="help">Online Help</string>
    <string name="hint_input_content">say something in %1$s&#8230;</string>
    <string name="hint_input_your_current_password">Please input your password</string>
    <string name="hint_input_your_fullname">Please input your fullname.</string>
    <string name="hint_input_your_memo">Please input memo.</string>
    <string name="hint_input_your_new_password">Please input new password.</string>
    <string name="hint_input_your_new_tel">Please input new phone number.</string>
    <string name="hint_input_your_nickname">Please input nickname.</string>
    <string name="hint_input_your_old_password">Please input old password.</string>
    <string name="hint_input_your_repeat_password">Please input new password again.</string>
    <string name="hint_input_your_tel">Please input your account.</string>
    <string name="hint_input_your_telphone">Please input your phone number.</string>
    <string name="image_file_is_not_exist">image file is not exist.</string>
    <string name="incorrect_login_info">Invalid login info</string>
    <string name="input_a_valid_email">Email is invalid.</string>
    <string name="input_a_valid_id">Please enter a valid ID</string>
    <string name="input_your_fullname_msg">Please input your fullname.</string>
    <string name="input_your_new_tel_msg">Please input new tel.</string>
    <string name="input_your_password_msg">Please input old password, new password and the repassword correctly.</string>
    <string name="introduce">Introduce</string>
    <string name="next">Next</string>
    <string name="prompt_change_tel_step1_error">Invalid Password</string>
    <string name="prompt_change_tel_step2_error">Invalid Account</string>
    <string name="prompt_input_your_fullname_error">Full name is required.</string>
    <string name="prompt_input_your_new_password_error">Password is require.d</string>
    <string name="prompt_input_your_old_password_error">Old password is required.</string>
    <string name="prompt_input_your_repeat_password_error">Repassword is required.</string>
    <string name="setting">Settings</string>
    <string name="apply_translator_description1">TT Translotor is a part-time job platform for urban white-collar workers who are proficient in a foreign language, have good oral foreign language translation skills and have free time.</string>
    <string name="apply_translator_description2">Using free time to type words on phone may exchange a cup of Starbucks coffee. It is so cool !</string>
    <string name="apply_translator_description3">Only two features on the home page.1, Submit Transltion. 2, Cash Rewards</string>
    <string name="apply_translator_app">App store</string>
    <string name="translator_app_name">TTTranslator</string>
    <string name="apply_translator_download">Download</string>
    <string name="change_profile">Profile</string>
    <string name="not_interrupt_time_result">Every day %1$02d:00 - %2$s %3$02d:00</string>
    <string name="not_interrupt_start">Start Time : %02d:00</string>
    <string name="not_interrupt_duration">Duration : %d hours</string>
    <string name="add_frends_class">按班级找学生</string>
    <string name="add_frends_course">按课程找学生</string>
    <string name="add_friends_org">按部门找老师</string>
    <string name="add_friends_college">按学院找老师</string>
</resources>