<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/menu_item_chat_setting"
        android:icon="@drawable/ic_action_new"
        android:title="@string/add"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/translator_action_class"
                android:icon="@drawable/discover_addfriends"
                app:showAsAction="ifRoom|collapseActionView"
                android:onClick="doChatClass"
                android:title="@string/add_frends_class"/>
            <item
                android:id="@+id/translator_action_course"
                android:icon="@drawable/discover_addfriends"
                app:showAsAction="ifRoom|collapseActionView"
                android:onClick="doChatCourse"
                android:title="@string/add_frends_course"/>
            <item
                android:id="@+id/translator_action_org"
                app:showAsAction="ifRoom|collapseActionView"
                android:icon="@drawable/discover_addfriends"
                android:onClick="doChatOrg"
                android:title="@string/add_friends_org"/>
            <item
                android:id="@+id/translator_action_college"
                app:showAsAction="ifRoom|collapseActionView"
                android:icon="@drawable/discover_addfriends"
                android:onClick="doChatCollege"
                android:title="@string/add_friends_college"/>

        </menu>
    </item>
</menu>