<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".ui.setting.ApplyTranslatorActivity" >

    <RelativeLayout
        android:id="@+id/activity_apply_translator_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/preference_item" >

        <ImageView
            android:id="@+id/activity_apply_translator_app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:src="@drawable/volunteer_icon" />

        <TextView
            style="@style/importance_contents_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/activity_apply_translator_app_icon"
            android:text="@string/translator_app_name"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/activity_apply_translator_link_button"
                style="@style/text_appearance_medium"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:background="@drawable/background_button_orange"
                android:clickable="true"
                android:textColor="#ffffff"
                android:text="@string/apply_translator_app" />

            <Button
                android:id="@+id/activity_apply_translator_dowlond_button"
                style="@style/text_appearance_medium"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/background_button_orange"
                android:clickable="true"
                android:textColor="#ffffff"
                android:text="@string/apply_translator_download" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/activity_apply_translator_description_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_apply_translator_top"
        android:layout_margin="10dp"
        android:text="@string/introduce" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/activity_apply_translator_description_title_text"
        android:background="@drawable/preference_item"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/activity_apply_translator_description1view_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/apply_translator_description1" />

        <TextView
            android:id="@+id/activity_apply_translator_description2view_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_apply_translator_description1view_text"
            android:padding="10dp"
            android:text="@string/apply_translator_description2" />

        <TextView
            android:id="@+id/activity_apply_translator_description3view_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_apply_translator_description2view_text"
            android:padding="10dp"
            android:text="@string/apply_translator_description3" />
    </RelativeLayout>

</RelativeLayout>