<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:background="@color/main_background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/activity_change_profile_password_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/activity_change_profile_password_msg_layout"
                style="@style/chat_text_date_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp" >

                <TextView
                    android:id="@+id/change_profile_password_msg_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/input_your_password_msg" />
            </RelativeLayout>

            <com.ruptech.chinatalk.widget.EditTextWithDel
                android:id="@+id/activity_change_profile_old_password_text"
                
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:hint="@string/hint_input_your_old_password"
                android:inputType="textPassword"
                android:maxLength="50"
                android:singleLine="true" />

            <TextView
                android:id="@+id/activity_change_profile_old_password_error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/prompt_input_your_old_password_error"
                android:textColor="#ff0000" />

            <com.ruptech.chinatalk.widget.EditTextWithDel
                android:id="@+id/activity_change_profile_new_password_text"
                
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:hint="@string/hint_input_your_new_password"
                android:inputType="textPassword"
                android:maxLength="50"
                android:singleLine="true" />

            <TextView
                android:id="@+id/activity_change_profile_new_password_error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/prompt_input_your_new_password_error"
                android:textColor="#ff0000" />

            <com.ruptech.chinatalk.widget.EditTextWithDel
                android:id="@+id/activity_change_profile_repeat_password_text"
                
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:hint="@string/hint_input_your_repeat_password"
                android:inputType="textPassword"
                android:maxLength="50"
                android:singleLine="true" />

            <TextView
                android:id="@+id/activity_change_profile_repeat_password_error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/prompt_input_your_repeat_password_error"
                android:textColor="#ff0000" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>