<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:background="@color/main_background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/activity_change_tel_password_msg_layout"
        style="@style/chat_text_date_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/activity_change_tel_password_msg_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_tel_password_msg" />
    </RelativeLayout>

    <com.ruptech.chinatalk.widget.EditTextWithDel
        android:id="@+id/activity_change_tel_pwd_button"
        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_change_tel_password_msg_layout"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_input_your_current_password"
        android:inputType="textPassword"
        android:maxLength="50"
        android:singleLine="true" />

    <TextView
        android:id="@+id/activity_change_tel_step1_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_change_tel_pwd_button"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/prompt_change_tel_step1_error"
        android:textColor="#ff0000" />

    <Button
        android:id="@+id/activity_change_tel_step1_next_button"
        style="@style/text_appearance_medium"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_change_tel_step1_error"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_button_orange"
        android:text="@string/next"
        android:textColor="#ffffffff" />

</RelativeLayout>